--- a/man/man1/imthreshold-finfo.1
+++ b/man/man1/imthreshold-finfo.1
@@ -30,7 +30,6 @@ Copyright 2017 zvezdochiot.
  imthreshold-anytominidjvu,
  imthreshold-deskew,
  imthreshold-fautoinv,
- imthreshold-fbgfglsep,
  imthreshold-fdespeckle,
  imthreshold-filter,
  imthreshold-finfo,
@@ -49,6 +48,7 @@ Copyright 2017 zvezdochiot.
  imthreshold-tlocal,
  imthreshold-ttext,
  imthreshold-twhiterohrer,
+ imthreshold-separate,
  imthreshold-bash-scripts.
 
 .SH CONTACTS
