--- a/man/man1/imthreshold-size.1
+++ b/man/man1/imthreshold-size.1
@@ -1,4 +1,4 @@
-.TH "ImThreshold User Manual" 1 "19 Dec 2017" "ImThreshold documentation"
+.TH "ImThreshold User Manual" 1 "17 Jan 2018" "ImThreshold documentation"
 
 .SH NAME
 imthreshold-size
@@ -43,7 +43,6 @@ Copyright 2017 zvezdochiot.
  imthreshold-anytominidjvu,
  imthreshold-deskew,
  imthreshold-fautoinv,
- imthreshold-fbgfglsep,
  imthreshold-fdespeckle,
  imthreshold-filter,
  imthreshold-finfo,
@@ -62,6 +61,7 @@ Copyright 2017 zvezdochiot.
  imthreshold-tlocal,
  imthreshold-ttext,
  imthreshold-twhiterohrer,
+ imthreshold-separate,
  imthreshold-bash-scripts.
 
 .SH CONTACTS
