--- a/doc/imthreshold/CHANGELOG
+++ b/doc/imthreshold/CHANGELOG
@@ -1,3 +1,12 @@
+0.20180310
+
+    Fix Separate image: default method
+    Separate image: delta method
+
+0.20180303
+
+    Fix S-norm
+
 0.20180217
 
     Separate image: rewrite mask
