--- a/doc/imthreshold/CHANGELOG
+++ b/doc/imthreshold/CHANGELOG
@@ -1,3 +1,7 @@
+0.20180414
+
+    Math: add: harmonic, min, max
+
 0.20180408
 
     Math: average, distance, divide, geometric, minus, multiply, norm, plus, threshold
