--- a/man/man1/imthreshold-filter.1
+++ b/man/man1/imthreshold-filter.1
@@ -1,4 +1,4 @@
-.TH "ImThreshold User Manual" 1 "17 Jan 2018" "ImThreshold documentation"
+.TH "ImThreshold User Manual" 1 "14 Apr 2018" "ImThreshold documentation"
 
 .SH NAME
 imthreshold-filter
@@ -14,8 +14,9 @@ imthreshold-filter [options] <input_image> <output_image>
 -f str
 name filter:
                     'adsmooth'
-                    'bgdiv'
                     'blur'
+                    'bwc'
+                    'cluster'
                     'greynorm'
                     'greyworld'
                     'illumc'
@@ -23,6 +24,8 @@ name filter:
                     'kmeans'
                     'levelmean'
                     'levelsigma'
+                    'mirror'
+                    'monocolor'
                     'none' (default)
                     'peron'
                     'posterize'
@@ -83,6 +86,7 @@ Copyright 2017 zvezdochiot.
 
 .SH SEE ALSO
  imthreshold,
+ imthreshold-a4,
  imthreshold-anytodjvu,
  imthreshold-anytominidjvu,
  imthreshold-deskew,
@@ -90,11 +94,12 @@ Copyright 2017 zvezdochiot.
  imthreshold-fdespeckle,
  imthreshold-filter,
  imthreshold-finfo,
- imthreshold-flevell,
  imthreshold-fpmean,
+ imthreshold-math,
  imthreshold-rotate,
  imthreshold-sbwmag2,
  imthreshold-scris,
+ imthreshold-separate,
  imthreshold-shris,
  imthreshold-size,
  imthreshold-tdalg,
@@ -102,10 +107,10 @@ Copyright 2017 zvezdochiot.
  imthreshold-tgatos,
  imthreshold-tglobal,
  imthreshold-thalftone2,
+ imthreshold-tlayer,
  imthreshold-tlocal,
  imthreshold-ttext,
  imthreshold-twhiterohrer,
- imthreshold-separate,
  imthreshold-bash-scripts.
 
 .SH CONTACTS
