--- a/man/man1/imthreshold-anytodjvu.1
+++ b/man/man1/imthreshold-anytodjvu.1
@@ -1,4 +1,4 @@
-.TH "ImThreshold User Manual" 1 "17 Jan 2018" "ImThreshold documentation"
+.TH "ImThreshold User Manual" 1 "14 Apr 2018" "ImThreshold documentation"
 
 .SH NAME
 imthreshold-anytodjvu
@@ -35,6 +35,7 @@ Copyright 2016 zvezdochiot.
 
 .SH SEE ALSO
  imthreshold,
+ imthreshold-a4,
  imthreshold-anytodjvu,
  imthreshold-anytominidjvu,
  imthreshold-deskew,
@@ -42,11 +43,12 @@ Copyright 2016 zvezdochiot.
  imthreshold-fdespeckle,
  imthreshold-filter,
  imthreshold-finfo,
- imthreshold-flevell,
  imthreshold-fpmean,
+ imthreshold-math,
  imthreshold-rotate,
  imthreshold-sbwmag2,
  imthreshold-scris,
+ imthreshold-separate,
  imthreshold-shris,
  imthreshold-size,
  imthreshold-tdalg,
@@ -54,10 +56,10 @@ Copyright 2016 zvezdochiot.
  imthreshold-tgatos,
  imthreshold-tglobal,
  imthreshold-thalftone2,
+ imthreshold-tlayer,
  imthreshold-tlocal,
  imthreshold-ttext,
  imthreshold-twhiterohrer,
- imthreshold-separate,
  imthreshold-bash-scripts.
 
 .SH CONTACTS
@@ -67,3 +69,4 @@ BookScanLib Project:
 Imthreshold Project:
  Website: https://sourceforge.net/projects/imthreshold/
  Email: zvezdochiot@users.sourceforge.net
+
