--- a/man/man1/imthreshold-separate.1
+++ b/man/man1/imthreshold-separate.1
@@ -1,4 +1,4 @@
-.TH "ImThreshold User Manual" 1 "17 Jan 2018" "ImThreshold documentation"
+.TH "ImThreshold User Manual" 1 "14 Apr 2018" "ImThreshold documentation"
 
 .SH NAME
 imthreshold-separate
@@ -13,6 +13,7 @@ imthreshold-separate [options] <input_file> <input_mask_file>(BW) <output_fg_fil
 .TP
 -m str
 name method:
+                    'delta'
                     'inpaint'
                     'mscale'
                     'simple' (default).
@@ -26,11 +27,17 @@ base block size (int, optional, default = 3)
 -f N
 foreground divide (int, optional, default = 2)
 .TP
+-k N.N
+coefficient delta threshold (double, optional, default = 2.0)
+.TP
 -l N
-level (int, optional, default = 10)
+level (int, optional, default = 0[auto])
 .TP
 -o N.N
 overlay (double, optional, default = 0.5)
+.TP
+-r
+rewrite mask (bool, optional, default = false)
 .TP
 -h
 help
@@ -44,6 +51,7 @@ Copyright 2017 zvezdochiot.
 
 .SH SEE ALSO
  imthreshold,
+ imthreshold-a4,
  imthreshold-anytodjvu,
  imthreshold-anytominidjvu,
  imthreshold-deskew,
@@ -51,11 +59,12 @@ Copyright 2017 zvezdochiot.
  imthreshold-fdespeckle,
  imthreshold-filter,
  imthreshold-finfo,
- imthreshold-flevell,
  imthreshold-fpmean,
+ imthreshold-math,
  imthreshold-rotate,
  imthreshold-sbwmag2,
  imthreshold-scris,
+ imthreshold-separate,
  imthreshold-shris,
  imthreshold-size,
  imthreshold-tdalg,
@@ -63,10 +72,10 @@ Copyright 2017 zvezdochiot.
  imthreshold-tgatos,
  imthreshold-tglobal,
  imthreshold-thalftone2,
+ imthreshold-tlayer,
  imthreshold-tlocal,
  imthreshold-ttext,
  imthreshold-twhiterohrer,
- imthreshold-separate,
  imthreshold-bash-scripts.
 
 .SH CONTACTS
