--- a/man/man1/imthreshold-tlayer.1
+++ b/man/man1/imthreshold-tlayer.1
@@ -16,6 +16,7 @@ name filter:
     'bernsen'
     'bimod'
     'chistian'
+    'mscale'
     'niblack'
     'sauvola' (default)
 .TP
@@ -25,14 +26,17 @@ contrast limit (int, optional, default = 128)
 -d N.N
 delta (double, optional, default = -5.0)
 .TP
--l N
-lower bound (int, optional, default = 0)
-.TP
 -g N
 dynamic range (int, optional, default = 128)
 .TP
+-l N
+lower bound (int, optional, default = 0)
+.TP
 -n
 norm (bool, optional, default = false)
+.TP
+-o N.N
+overlay (double, optional, default = 0.5)
 .TP
 -r N
 radius (int, optional, default = 7)
