--- a/man/man1/imthreshold-filter.1
+++ b/man/man1/imthreshold-filter.1
@@ -13,30 +13,34 @@ imthreshold-filter [options] <input_image> <output_image>
 .TP
 -f str
 name filter:
-                    'adsmooth'
-                    'blur'
-                    'bwc'
-                    'cluster'
-                    'greynorm'
-                    'greyworld'
-                    'illumc'
-                    'invert'
-                    'kmeans'
-                    'levelmean'
-                    'levelsigma'
-                    'mirror'
-                    'monocolor'
-                    'none' (default)
-                    'peron'
-                    'posterize'
-                    'retinex'
-                    'rs'
-                    'selgauss'
-                    'shrink'
-                    'unripple'
-                    'unsharp'
-                    'whitefill'
-                    'wiener'
+    'adsmooth'
+    'blur'
+    'bwc'
+    'cluster'
+    'greynorm'
+    'greyworld'
+    'illumc'
+    'invert'
+    'kmeans'
+    'levelmean'
+    'levelsigma'
+    'mirror'
+    'monocolor'
+    'mclose'
+    'mdilate'
+    'merose'
+    'mopen'
+    'none' (default)
+    'peron'
+    'posterize'
+    'retinex'
+    'rs'
+    'selgauss'
+    'shrink'
+    'unripple'
+    'unsharp'
+    'whitefill'
+    'wiener'
 .TP
 -a N.N
 amount (double, optional, default = 0.5)
