--- a/man/man1/imthreshold-fdespeckle.1
+++ b/man/man1/imthreshold-fdespeckle.1
@@ -14,10 +14,11 @@ imthreshold-fdespeckle [options] <input_image>(BW) <output_image>(BW)
 .TP
 -m str
 name method:
-                    'hist'
-                    'invert'
-                    'neuro'
-                    'simple' (default)
+    'hist'
+    'invert'
+    'mag2'
+    'neuro'
+    'simple' (default)
 .TP
 -a N
 aperture size (int, optional, default = 2)
