--- a/man/man1/imthreshold-filter.1
+++ b/man/man1/imthreshold-filter.1
@@ -26,6 +26,10 @@ name filter:
     'levelsigma'
     'mirror'
     'monocolor'
+    'mbclose'
+    'mbdilate'
+    'mberose'
+    'mbopen'
     'mclose'
     'mdilate'
     'merose'
