--- a/doc/imthreshold/CHANGELOG
+++ b/doc/imthreshold/CHANGELOG
@@ -1,3 +1,8 @@
+0.20180618
+
+    Math: add: sharpenbad metric diff image
+    Math: add: option delta
+
 0.20180518
 
     Filter: add: diff denoise method
