--- a/man/man1/imthreshold-math.1
+++ b/man/man1/imthreshold-math.1
@@ -1,4 +1,4 @@
-.TH "ImThreshold User Manual" 1 "14 Apr 2018" "ImThreshold documentation"
+.TH "ImThreshold User Manual" 1 "18 Jun 2018" "ImThreshold documentation"
 
 .SH NAME
  imthreshold-math
@@ -26,7 +26,11 @@ name method
     'multiply'
     'norm'
     'plus'
+    'sbmetric'
     'threshold (default)'
+.TP
+-d N
+delta (int, optional, default = 0)
 .TP
 -h
 help
