--- a/man/man1/imthreshold-size.1
+++ b/man/man1/imthreshold-size.1
@@ -1,4 +1,4 @@
-.TH "ImThreshold User Manual" 1 "18 Jun 2018" "ImThreshold documentation"
+.TH "ImThreshold User Manual" 1 "07 Nov 2018" "ImThreshold documentation"
 
 .SH NAME
 imthreshold-size
@@ -14,6 +14,7 @@ imthreshold-size [options] <input_image> <output_image>
 -f str
 name filter:
                     'bicubic'
+                    'bicont'
                     'biline'
                     'gsample' (default)
                     'nearest'
