--- a/man/man1/imthreshold-shris.1
+++ b/man/man1/imthreshold-shris.1
@@ -14,8 +14,9 @@ imthreshold-shris [options] <input_file> <output_file>
 .TP
 -f str
 name filter:
-    'hris'
+    'hris' (default)
     'gsample'
+    'frp' (long!)
 .TP
 -m
 mode (int, optional, default = 2, {2,{3(hris),all(gsample)}})
