--- a/man/man1/imthreshold-tlayer.1
+++ b/man/man1/imthreshold-tlayer.1
@@ -16,6 +16,7 @@ name filter:
     'bernsen'
     'bimod'
     'chistian'
+    'gravure'
     'mscale'
     'niblack'
     'sauvola' (default)
@@ -42,7 +43,7 @@ overlay (double, optional, default = 0.5)
 radius (int, optional, default = 7)
 .TP
 -s N.N
-sensitivity (double, optional, default = 0.5)
+sensitivity (double, optional, default = 0.2)
 .TP
 -u N
 upper bound (int, optional, default = 255)
