--- a/man/man1/imthreshold-tlocal.1
+++ b/man/man1/imthreshold-tlocal.1
@@ -18,6 +18,7 @@ name filter:
     'bimod'
     'blur'
     'chistian'
+    'gravure'
     'mscale'
     'edge'
     'niblack'
@@ -48,7 +49,7 @@ norm (bool, optional, default = false)
 radius (int, optional, default = 7)
 .TP
 -s N.N
-sensitivity (double, optional, default = 0.5)
+sensitivity (double, optional, default = 0.2)
 .TP
 -u N
 upper bound (int, optional, default = 255)
