--- a/doc/imthreshold/CHANGELOG
+++ b/doc/imthreshold/CHANGELOG
@@ -1,3 +1,11 @@
+0.20200128
+
+    Threshold: Gravure: Mean -> BiMod
+
+0.20200111
+
+    Library: split library code for splint
+
 0.20191202
 
     Threshold: fixed Sauvola
