--- a/doc/imthreshold/CHANGELOG
+++ b/doc/imthreshold/CHANGELOG
@@ -1,3 +1,8 @@
+0.20200212
+
+    Threshold: added dithh Knuth D.E.
+    Threshold: Dalg: lower/upper bound
+
 0.20200128
 
     Threshold: Gravure: Mean -> BiMod
