--- a/man/man1/imthreshold.1
+++ b/man/man1/imthreshold.1
@@ -1,4 +1,4 @@
-.TH "ImThreshold User Manual" 1 "13 Oct 2019" "ImThreshold documentation"
+.TH "ImThreshold" 1 0.20200212 "12 Feb 2020" "User Manual"
 
 .SH NAME
 imthreshold
@@ -35,7 +35,6 @@ Copyright 2017 zvezdochiot.
  imthreshold-separate,
  imthreshold-shris,
  imthreshold-size,
- imthreshold-tdalg,
  imthreshold-tdjvul,
  imthreshold-tgatos,
  imthreshold-tglobal,
