--- a/doc/imthreshold/CHANGELOG
+++ b/doc/imthreshold/CHANGELOG
@@ -1,3 +1,7 @@
+0.20200213
+
+    Threshold: added ditho Knuth D.E.
+
 0.20200212
 
     Threshold: added dithh Knuth D.E.
@@ -171,3 +175,7 @@
 0.20171129
 
     Other modify...
+
+---------------------------------------------------------------------
+https://sourceforge.net/projects/imthreshold/
+https://github.com/ImageProcessing-ElectronicPublications/imthreshold
