--- a/man/man1/imthreshold-scris.1
+++ b/man/man1/imthreshold-scris.1
@@ -1,4 +1,4 @@
-.TH "ImThreshold" 1 0.20200212 "12 Feb 2020" "User Manual"
+.TH "ImThreshold" 1 0.20200307 "07 Mar 2020" "User Manual"
 
 .SH NAME
 imthreshold-scris
@@ -17,10 +17,10 @@ name filter:
                     'bicont' (default)
 .TP
 -p N.N
-part prefilter (double, optional, default = 0.5)
+part prefilter (float, optional, default = 0.5)
 .TP
 -r N.N
-ratio, scale factor (double, optional, default = 1.0)
+ratio, scale factor (float, optional, default = 1.0)
 .TP
 -w N
 new width (int, optional, default = [auto])
