--- a/man/man1/imthreshold-separate.1
+++ b/man/man1/imthreshold-separate.1
@@ -1,4 +1,4 @@
-.TH "ImThreshold" 1 0.20200212 "12 Feb 2020" "User Manual"
+.TH "ImThreshold" 1 0.20200307 "07 Mar 2020" "User Manual"
 
 .SH NAME
 imthreshold-separate
@@ -28,13 +28,13 @@ base block size (int, optional, default = 3)
 foreground divide (int, optional, default = 2)
 .TP
 -k N.N
-coefficient delta threshold (double, optional, default = 2.0)
+coefficient delta threshold (float, optional, default = 2.0)
 .TP
 -l N
 level (int, optional, default = 0[auto])
 .TP
 -o N.N
-overlay (double, optional, default = 0.5)
+overlay (float, optional, default = 0.5)
 .TP
 -r
 rewrite mask (bool, optional, default = false)
