--- a/man/man1/imthreshold-tdjvul.1
+++ b/man/man1/imthreshold-tdjvul.1
@@ -1,4 +1,4 @@
-.TH "ImThreshold" 1 0.20200212 "12 Feb 2020" "User Manual"
+.TH "ImThreshold" 1 0.20200307 "07 Mar 2020" "User Manual"
 
 .SH NAME
 imthreshold-tdjvul
@@ -12,7 +12,7 @@ imthreshold-tdjvul [options] <input_file> <output_file>(BW) [fg_file] [bg_file] 
 .SH OPTIONS
 .TP
 -a N.N
-anisotropic (double, optional, default = 0.0)
+anisotropic (float, optional, default = 0.0)
 .TP
 -c N
 clean fg, bg blur radius (int, optional, default = 0)
@@ -33,7 +33,7 @@ level (int, optional, default = 0[auto])
 invert station (bool, optional, default = false)
 .TP
 -o N.N
-overlay (double, optional, default = 0.5)
+overlay (float, optional, default = 0.5)
 .TP
 -p N
 posterize fg (int, optional, default = 0)
