--- a/man/man1/imthreshold-tgatos.1
+++ b/man/man1/imthreshold-tgatos.1
@@ -1,4 +1,4 @@
-.TH "ImThreshold" 1 0.20200212 "12 Feb 2020" "User Manual"
+.TH "ImThreshold" 1 0.20200307 "07 Mar 2020" "User Manual"
 
 .SH NAME
 imthreshold-tgatos
@@ -20,7 +20,7 @@ mode {niblack, sauvola, chistian, bimod, dalg, default = niblack)
 radius (int, optional, default = 7)
 .TP
 -s N.N
-sensitivity (double, optional, default = -0.2)
+sensitivity (float, optional, default = -0.2)
 .TP
 -f N
 dynamic range (int, optional, default = 128)
@@ -32,16 +32,16 @@ lower bound (int, optional, default = 20)
 upper bound (int, optional, default = 150)
 .TP
 -d N.N
-delta (double, optional, default = 0.0)
+delta (float, optional, default = 0.0)
 .TP
 -q N.N
-q (double, optional, default = 0.6)
+q (float, optional, default = 0.6)
 .TP
 -1 N.N
-p1 (double, optional, default = 0.5)
+p1 (float, optional, default = 0.5)
 .TP
 -2 N.N
-p2 (double, optional, default = 0.8)
+p2 (float, optional, default = 0.8)
 .TP
 -h
 help
