--- a/man/man1/imthreshold-tlayer.1
+++ b/man/man1/imthreshold-tlayer.1
@@ -1,4 +1,4 @@
-.TH "ImThreshold" 1 0.20200212 "12 Feb 2020" "User Manual"
+.TH "ImThreshold" 1 0.20200307 "07 Mar 2020" "User Manual"
 
 .SH NAME
 imthreshold-tlayer
@@ -25,7 +25,7 @@ name filter:
 contrast limit (int, optional, default = 128)
 .TP
 -d N.N
-delta (double, optional, default = -5.0)
+delta (float, optional, default = -5.0)
 .TP
 -g N
 dynamic range (int, optional, default = 128)
@@ -37,13 +37,13 @@ lower bound (int, optional, default = 0)
 norm (bool, optional, default = false)
 .TP
 -o N.N
-overlay (double, optional, default = 0.5)
+overlay (float, optional, default = 0.5)
 .TP
 -r N
 radius (int, optional, default = 7)
 .TP
 -s N.N
-sensitivity (double, optional, default = 0.2)
+sensitivity (float, optional, default = 0.2)
 .TP
 -u N
 upper bound (int, optional, default = 255)
