--- a/man/man1/imthreshold-fautoinv.1
+++ b/man/man1/imthreshold-fautoinv.1
@@ -1,4 +1,4 @@
-.TH "ImThreshold" 1 0.20200212 "12 Feb 2020" "User Manual"
+.TH "ImThreshold" 1 0.20200307 "07 Mar 2020" "User Manual"
 
 .SH NAME
  imthreshold-fautoinv
@@ -13,7 +13,7 @@ AutoInvert colors filter image.
 .SH OPTIONS
 .TP
 -p N.N 
-pass (double, optional, default = 0.125)
+pass (float, optional, default = 0.125)
 .TP
 -h
 this help
