--- a/man/man1/imthreshold-fdespeckle.1
+++ b/man/man1/imthreshold-fdespeckle.1
@@ -1,4 +1,4 @@
-.TH "ImThreshold" 1 0.20200212 "12 Feb 2020" "User Manual"
+.TH "ImThreshold" 1 0.20200307 "07 Mar 2020" "User Manual"
 
 .SH NAME
 imthreshold-fdespeckle
@@ -29,7 +29,7 @@ aperture size (int, optional, default = 2)
 invert (bool, optional, default = false)
 .TP
 -k N.N
-lambda neuro learnen (double, optional, default = 0.1)
+lambda neuro learnen (float, optional, default = 0.1)
 .TP
 -l N
 learnen number (int, optional, default = 1)
