--- a/man/man1/imthreshold-fpmean.1
+++ b/man/man1/imthreshold-fpmean.1
@@ -1,4 +1,4 @@
-.TH "ImThreshold" 1 0.20200212 "12 Feb 2020" "User Manual"
+.TH "ImThreshold" 1 0.20200307 "07 Mar 2020" "User Manual"
 
 .SH NAME
  imthreshold-fpmean
@@ -13,7 +13,7 @@ imthreshold-fpmean [options] <input_file> <output_file>
 .SH OPTIONS
 .TP
 -r N.N
-radius (double, optional, default = 3.0)
+radius (float, optional, default = 3.0)
 .TP
 -m str
 mode
