--- a/man/man1/imthreshold-rotate.1
+++ b/man/man1/imthreshold-rotate.1
@@ -1,4 +1,4 @@
-.TH "ImThreshold" 1 0.20200212 "12 Feb 2020" "User Manual"
+.TH "ImThreshold" 1 0.20200307 "07 Mar 2020" "User Manual"
 
 .SH NAME
 imthreshold-rotate
@@ -12,7 +12,7 @@ imthreshold-rotate [options] <input_file> <output_file>
 .SH OPTIONS
 .TP
 -a N.N
-angle (double, optional, default = 0.0)
+angle (float, optional, default = 0.0)
 .TP
 -h
 help
