--- a/man/man1/imthreshold-tlayer.1
+++ b/man/man1/imthreshold-tlayer.1
@@ -1,4 +1,4 @@
-.TH "ImThreshold" 1 0.20200307 "07 Mar 2020" "User Manual"
+.TH "ImThreshold" 1 0.20200329 "29 Mar 2020" "User Manual"
 
 .SH NAME
 imthreshold-tlayer
@@ -20,6 +20,7 @@ name filter:
     'mscale'
     'niblack'
     'sauvola' (default)
+    'size'
 .TP
 -c N
 contrast limit (int, optional, default = 128)
