--- a/man/man1/imthreshold-tglobal.1
+++ b/man/man1/imthreshold-tglobal.1
@@ -1,4 +1,4 @@
-.TH "ImThreshold" 1 0.20200405 "05 Apr 2020" "User Manual"
+.TH "ImThreshold" 1 0.20200418 "18 Apr 2020" "User Manual"
 
 .SH NAME
 imthreshold-tglobal
@@ -18,8 +18,9 @@ name filter:
     'bimodc'
     'color'
     'dither'
-    'dithh'
-    'ditho'
+    'dithh' (Knuth D.E.)
+    'ditho' (Knuth D.E.)
+    'dithq'
     'entropy'
     'eqbright'
     'grad'
@@ -29,7 +30,10 @@ name filter:
     'quadmod'
     'rot'
     'tsai'
-    'use'
+    'use' (T=127)
+.TP
+-b
+color correct (bool, optional, default = false)
 .TP
 -d N
 delta (int, optional, default = 0)
