--- a/man/man1/imthreshold-tlocal.1
+++ b/man/man1/imthreshold-tlocal.1
@@ -1,4 +1,4 @@
-.TH "ImThreshold" 1 0.20200405 "05 Apr 2020" "User Manual"
+.TH "ImThreshold" 1 0.20200418 "18 Apr 2020" "User Manual"
 
 .SH NAME
 imthreshold-tlocal
@@ -25,6 +25,9 @@ name filter:
     'niblack'
     'sauvola' (default)
     'size'
+.TP
+-b
+color correct (bool, optional, default = false)
 .TP
 -c N
 contrast limit (int, optional, default = 128)
