--- a/man/man1/imthreshold-tglobal.1
+++ b/man/man1/imthreshold-tglobal.1
@@ -21,6 +21,7 @@ name filter:
     'dithh' (Knuth D.E.)
     'ditho' (Knuth D.E.)
     'dithq'
+    'ditht'
     'entropy'
     'eqbright'
     'grad'
