--- a/man/man1/imthreshold-tdjvul.1
+++ b/man/man1/imthreshold-tdjvul.1
@@ -1,4 +1,4 @@
-.TH "ImThreshold" 1 0.20200418 "18 Apr 2020" "User Manual"
+.TH "ImThreshold" 1 0.20200423 "23 Apr 2020" "User Manual"
 
 .SH NAME
 imthreshold-tdjvul
@@ -10,6 +10,9 @@ DjVuL thresholds an image (Multi-scale binarization).
 imthreshold-tdjvul [options] <input_file> <output_file>(BW) [fg_file] [bg_file] [fg_mask_file] [bg_mask_file]
 
 .SH OPTIONS
+.TP
+-4
+RGB to RYB4 (bool, optional, default = false)
 .TP
 -a N.N
 anisotropic (float, optional, default = 0.0)
