--- a/man/man1/imthreshold-filter.1
+++ b/man/man1/imthreshold-filter.1
@@ -1,4 +1,4 @@
-.TH "ImThreshold" 1 0.20200418 "18 Apr 2020" "User Manual"
+.TH "ImThreshold" 1 0.20200423 "23 Apr 2020" "User Manual"
 
 .SH NAME
 imthreshold-filter
@@ -48,6 +48,9 @@ name filter:
     'unsharp'
     'whitefill'
     'wiener'
+.TP
+-4
+RGB to RYB4 (bool, optional, default = false)
 .TP
 -a N.N
 amount (float, optional, default = 0.5)
