--- a/man/man1/imthreshold-deskew.1
+++ b/man/man1/imthreshold-deskew.1
@@ -12,6 +12,13 @@ imthreshold-deskew <input_file> <output_file>
 
 .SH OPTIONS
 .TP
+-f str
+name filter:
+    'bimod' (default)
+    'grad'
+    'niblack'
+    'sauvola'
+.TP
 <input_file>
 the name of the image file is supported by the library freeimage,
 .TP
