--- a/man/man1/imthreshold-size.1
+++ b/man/man1/imthreshold-size.1
@@ -1,4 +1,4 @@
-.TH "ImThreshold" 1 0.20200423 "23 Apr 2020" "User Manual"
+.TH "ImThreshold" 1 0.20210430 "30 Apr 2021" "User Manual"
 
 .SH NAME
 imthreshold-size
@@ -18,6 +18,9 @@ name filter:
                     'biline'
                     'gsample' (default)
                     'nearest'
+.TP
+-p N.N
+part prefilter RIS (float, optional, default = 0.0[off])
 .TP
 -r N.N
 ratio, scale factor (float, optional, default = 1.0)
