--- a/man/man1/imthreshold-shris.1
+++ b/man/man1/imthreshold-shris.1
@@ -1,4 +1,4 @@
-.TH "ImThreshold" 1 0.20211123 "23 Nov 2021" "User Manual"
+.TH "ImThreshold" 1 0.20220629 "29 Jun 2022" "User Manual"
 
 .SH NAME
 imthreshold-shris
@@ -16,6 +16,7 @@ imthreshold-shris [options] <input_file> <output_file>
 name filter:
     'hris' (default)
     'gsample'
+    'iris'
     'frp' (long!)
 .TP
 -m
