--- a/man/man1/imthreshold-size.1
+++ b/man/man1/imthreshold-size.1
@@ -1,4 +1,4 @@
-.TH "ImThreshold" 1 0.20220629 "29 Jun 2022" "User Manual"
+.TH "ImThreshold" 1 0.20220702 "02 Jul 2022" "User Manual"
 
 .SH NAME
 imthreshold-size
@@ -21,6 +21,7 @@ name filter:
 .TP
 -p N.N
 part prefilter RIS (float, optional, default = 0.0[off])
+(<0 - back-direct-diff/4-direct-patch, >0 - direct-back-diff-path-direct)
 .TP
 -r N.N
 ratio, scale factor (float, optional, default = 1.0)
