--- a/man/man1/imthreshold-size.1
+++ b/man/man1/imthreshold-size.1
@@ -16,11 +16,12 @@ name filter:
                     'bicubic'
                     'bicont'
                     'biline'
+                    'biakima'
                     'gsample' (default)
                     'nearest'
 .TP
 -p N.N
-part prefilter RIS (float, optional, default = 0.0[off])
+part prefilter RIS (float, optional, default = 1.0)
 (<0 - back-direct-diff/4-direct-patch, >0 - direct-back-diff-path-direct)
 .TP
 -r N.N
